<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E-Present</string>
    <string name="attendance_form">Absensi TIF RP 23 CNS B</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="student_id">NIM</string>
    <string name="phone_number">Nomor HP</string>
    <string name="date_and_time">Tanggal &amp; Waktu:</string>
    <string name="submit_attendance">Kirim Absensi</string>
    <string name="attendance_success">Absensi berhasil disimpan!</string>
    <string name="field_empty">Semua bidang harus diisi!</string>
    <string name="date">Tanggal</string>
    <string name="time">Waktu</string>
    <string name="select_date">Pilih Tanggal</string>
    <string name="select_time">Pilih Waktu</string>
</resources>